fix show titles with long words that do not wrap

--- a/apps/partner/stylesheets/shows_grid.styl
+++ b/apps/partner/stylesheets/shows_grid.styl
@@ -59,6 +59,7 @@
     .partner-show-name
       font-size 24px
       font-style italic
+      word-wrap break-word
 
     .partner-show-time
       font-size 18px
